# aldor

aldor/aldor/lib/libfoam/: Makefile.am
aldor/aldor/lib/libfoamlib/: Makefile.am
aldor/aldor/src/: Makefile.am  foam.c  genfoam.c  of_inlin.c  optfoam.c  os_macosx_vm.c  os_unix.c
aldor/aldor/src/java/: genjava.c
aldor/aldor/subcmd/unitools/: Makefile.am
aldor/lib/: buildlib.mk  testprog.am
aldor/lib/aldor/src/: Makefile.am
aldor/lib/aldor/test/: Makefile.am
aldor/lib/algebra/src/: Makefile.am
aldor/lib/algebra/src/test/: tst_dup.as
aldor/lib/axldem/src/: Makefile.am
aldor/lib/axllib/src/: Makefile.am
aldor/lib/axllib/test/: Makefile.am
aldor/lib/axllib/test/bug818/: bug818.as  bug818.ref
debian/: changelog
